--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,22 @@
+@font-face {
+  font-display: swap;
+  font-family: "Century-Gothic", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  src:
+    url("./fonts/centurygothic.woff") format("woff"),
+    url("./fonts/centurygothic.woff2") format("woff2");
+}
+
+.font-preload {
+  font-family: "Century-Gothic", sans-serif;
+  position: absolute;
+  opacity: 0;
+  left: -100vw;
+  top: -100vh;
+  user-select: none;
+}
+
 * html, body {
   margin: 0;
   padding: 0;
